[project]
name = "aws-environment-store-manager"
version = "0.1.0"
description = "Python library to store and manage environment variables on AWS."
authors = [
    {name = "Maalik Kaufhold",email = "mail@maalikaufhold.de"}
]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
keywords = [
    "aws",
    "environment",
    "variables",
    "environment-variables",
    "parameter-store",
    "secrets-manager",
    "ssm",
    "boto3",
]
classifiers = [
    "Development Status :: 1 - Planning",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "boto3 (>=1.40.55,<2.0.0)",
]

[project.urls]
Homepage = "https://github.com/mkaufhol/aws-environment-store-manager"
Repository = "https://github.com/mkaufhol/aws-environment-store-manager"
Issues = "https://github.com/mkaufhol/aws-environment-store-manager/issues"

[tool.poetry]
packages = [{include = "aws_environment_store_manager", from = "src"}]


[tool.poetry.group.dev.dependencies]
ruff = "^0.14.1"
pre-commit = "^4.3.0"
bandit = "^1.8.6"


[tool.poetry.group.stubs.dependencies]
boto3-stubs = "^1.40.55"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 96

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
docstring-code-format = true
docstring-code-line-length = 30
skip-magic-trailing-comma = false
line-ending = "auto"
